Add start btn functionality

--- a/BlackJack/Windows/MainWindow.xaml
+++ b/BlackJack/Windows/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BlackJack"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="BlackJack" Height="500" Width="800"
+        KeyDown="MainWindow_OnKeyDown">
     <Grid>
-
+        <Image Source="../Resources/Blackjack_table.jpg" StretchDirection="Both" Stretch="Fill"></Image>
     </Grid>
 </Window>
