--- a/BlackJack/Windows/StartWindow.xaml
+++ b/BlackJack/Windows/StartWindow.xaml
@@ -11,7 +11,7 @@
             <Image Source="../Resources/StartmenuBackground.jpg" Stretch="UniformToFill" StretchDirection="DownOnly"/>
         </Grid>
         <StackPanel VerticalAlignment="Center" Margin="10, 0, 10, 0">
-            <Button Margin="10">Start</Button>
+            <Button Margin="10" Click="StartBtn_Click">Start</Button>
             <Button Margin="10">Credits</Button>
             <Button Margin="10">Quit</Button>
         </StackPanel>
