--- a/BlackJack/Windows/StartWindow.xaml
+++ b/BlackJack/Windows/StartWindow.xaml
@@ -13,7 +13,7 @@
         <StackPanel VerticalAlignment="Center" Margin="10, 0, 10, 0">
             <Button Margin="10" Click="StartBtn_Click">Start</Button>
             <Button Margin="10">Credits</Button>
-            <Button Margin="10">Quit</Button>
+            <Button Margin="10" Click="QuitBtn_Click">Quit</Button>
         </StackPanel>
     </Grid>
 </Window>
